# Nekora

./: .gitignore  META.prompt.md  README.md  environment.yml
backend/: pyproject.toml
backend/nekora_core/: __init__.py  main.py
backend/nekora_core/api/: __init__.py  routes.py
backend/nekora_core/db/: __init__.py
backend/nekora_core/modules/: __init__.py  manager.py
backend/nekora_core/sdk/: __init__.py  models.py
desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml
desktop/src/: App.tsx  api.ts  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs  ui.rs
desktop/src/components/: AboutModal.tsx  CommandBar.tsx  HistoryModal.tsx  ModuleModal.tsx  OutputPanel.tsx  Sidebar.tsx  StatusIndicator.tsx  ToolWorkspace.tsx  UnifiedInputPanel.tsx
modules_builtin/: __init__.py
modules_builtin/neko_text/: __init__.py  nekora.module.json
modules_builtin/neko_text/neko_text/: __init__.py  module.py
scripts/: Nekora  NekoraBk  NekoraUi  run_backend.sh  run_desktop_dev.sh
